# CicloSoftwareAI

./: .gitignore  Dockerfile  Dockerfile.inference  Makefile  deploy.yml  instructions.txt  pyproject.toml  requirements.txt
requirements/: requirements.txt  requirements_inference.txt  requirements_train.txt
src/: eda.py  inference,py  inference.py  train.py
tests/: test_eda.py  test_train.py
