[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciclosoftwareai"
version = "0.1.0"
description = "Train a model with Fashion-MNIST to make inference"
authors = [
    { name = "Kevin Gecchele", email = "kevingecchele04@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

dependencies = [
    "pylint (>=3.3.8,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=6.3.0,<7.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
    
]

[project.urls]
Homepage = "https://github.com/yecke75/CicloSoftwareAI"
Documentation = "https://github.com/yecke75/CicloSoftwareAI/wiki"